tache 4: network analysis, community detection and Streamlit dashboard

--- a/.env
+++ b/.env
@@ -6,11 +6,12 @@
 #
 
 # Mongo (inside docker-compose network)
-MONGO_URI=mongodb+srv://mohamadeamine12345_db_user:UQ4GC3vr5bfACj5C@cluster0.alnhhga.mongodb.net/?appName=Cluster0
+#MONGO_URI=mongodb+srv://mohamadeamine12345_db_user:UQ4GC3vr5bfACj5C@cluster0.alnhhga.mongodb.net/?appName=Cluster0
+MONGO_URI=mongodb://mongodb:27017
 MONGO_DB=reddit_stream
-
 # Collections the sentiment worker will process (comma-separated)
-MONGO_COLLECTIONS=comments,posts
+#MONGO_COLLECTIONS=comments,posts (pour medamine)
+MONGO_COLLECTIONS=processed_reddit
 
 # Sentiment model settings
 SENTIMENT_MODEL_PATH=models/sentiment_model.joblib
